--- a/index.html
+++ b/index.html
@@ -1,67 +1,178 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jujoco</title>
+	<title>Julian J. Cobos Dev</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body>
-  <header id="header">
-    <section>
-      <h1>JUJOCO</h1>
-      <img src="./images/rezise-headshot-pug.jpg" alt="profile pic">
-    </section>
-    <section>
-      <p>A Front-end software engineer</p>
-      <button class="resume-button">Resume</button>
-      <button class="contact-button">Contact</button>
-    </section>
-  </header>
-  <main>
-    <section class="intro">
-      <p>I'm a software developer with 2+ years of professional experience designing and developing simple to complex web applications. My specialty is Javascript/React and responsive web applications. I'm currently seeking new opportunities.</p>
-    </section>
 
-    <section class="projects">
-      <h2>What I've worked on in the pass</h2>
+<body class="is-preload">
 
-      <div class="project1">
-        <h3>MemoDis</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores voluptatibus eligendi ullam, aliquam quam temporibus ex cum deserunt id necessitatibus quod sed porro recusandae, tenetur nostrum ratione praesentium explicabo corporis?</p>
-      </div>
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
 
-      <div class="project2">
-        <h3>Amazon</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem fugit nisi nobis deserunt ullam a doloribus iure, corrupti consectetur illum error accusantium. Pariatur libero tenetur reiciendis magnam dolor iusto voluptatibus.</p>
-      </div>
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Julian J. Cobos</a></h1>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
 
-      <div class="project3">
-        <h3>UrbanOutfitters</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At ut eligendi possimus distinctio sunt ipsum dolorem commodi quisquam dolor fugiat quod expedita architecto, labore obcaecati reprehenderit ab reiciendis maxime quibusdam.</p>
-      </div>
-    </section>
+		<!-- Menu -->
+		<nav id="menu">
+			<div class="inner">
+				<h2>Menu</h2>
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#four">Projects</a></li>
+					<li><a href="#footer">Contact</a></li>
+				</ul>
+				<a href="#" class="close">Close</a>
+			</div>
+		</nav>
 
-    <section class="tools">
-      <h4>Whats in my tool box?</h4>
-      <div><img src="./images/javascriptSVG.svg" alt="javascript"></div>
-      <div><img src="./images/reactSVG.svg" alt="react"></div>
-      <div><img src="./images/nodeSVG.svg" alt="node"></div>
-    </section>
+		<!-- Banner -->
+		<section id="banner">
+			<div class="inner">
+				<div class="logo"><img class="icon" src="./images/headshot-pug.jpg" alt="picture of jujoco"></div>
+				<h2>Julian J. Cobos</h2>
+				<p>I'm a software engineer based in San Francisco, CA. I’m a huge fan of creating customer-facing web
+					apps that run across multiple devices using the latest technologies available..</p>
+			</div>
+		</section>
 
-    <section>
-      <h4>Wanna Collab?</h4>
-      <a href="mailto:jujocotm@gmail.com">Message Me</a>
-    </section>
-  </main>
-  <footer>
-    <div>
-      <ul>
-        <li><a href="https://linkedin.com/in/jujoco"></a>LinkedIn</li>
-        <li><a href="https://github.com/jujoco"></a>Github</li>
-        <li><a href="https://www.instagram.com/jujocotm"></a>Instagram</li>
-      </ul>
-    </div>
-  </footer>
+		<!-- Wrapper -->
+		<section id="wrapper">
+
+			<!-- One -->
+			<section id="one" class="wrapper spotlight style1">
+				<div class="inner">
+					<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Motivation</h2>
+						<p>info coming soon.</p>
+						<a href="#" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Two -->
+			<section id="two" class="wrapper alt spotlight style2">
+				<div class="inner">
+					<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Tools</h2>
+						<p>info coming soon.</p>
+						<a href="#" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section id="three" class="wrapper spotlight style3">
+				<div class="inner">
+					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Contributions</h2>
+						<p>info coming soon.</p>
+						<a href="#" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Four -->
+			<section id="four" class="wrapper alt style1">
+				<div class="inner">
+					<h2 class="major">Resent Projects</h2>
+					<p>info coming soon.</p>
+					<section class="features">
+						<article>
+							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+							<h3 class="major">OutFitters</h3>
+							<p>info TBA.</p>
+							<a href="#" class="special">Learn more</a>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+							<h3 class="major">Amazony</h3>
+							<p>info TBA.</p>
+							<a href="#" class="special">Learn more</a>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+							<h3 class="major">MemoDis</h3>
+							<p>info TBA.</p>
+							<a href="#" class="special">Learn more</a>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+							<h3 class="major">TaxGuyAlbert</h3>
+							<p>info TBA.</p>
+							<a href="#" class="special">Learn more</a>
+						</article>
+					</section>
+					<ul class="actions">
+						<li><a href="#" class="button">Back to Top</a></li>
+					</ul>
+				</div>
+			</section>
+
+		</section>
+
+		<!-- Footer -->
+		<section id="footer">
+			<div class="inner">
+				<h2 class="major">Get in touch</h2>
+				<p>As of June 1st 2019, I'm curreting seeking a full time role as a front-end engineer. If you or if your
+					'friend' is seeking some awesome talent. Hit me up!</p>
+				<form method="post" action="#">
+					<div class="fields">
+						<div class="field">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" />
+						</div>
+						<div class="field">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" />
+						</div>
+						<div class="field">
+							<label for="message">Message</label>
+							<textarea name="message" id="message" rows="4"></textarea>
+						</div>
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Send Message" /></li>
+					</ul>
+				</form>
+				<ul class="contact">
+					<li class="icon solid fa-home">San Francisco, CA</li>
+					<li class="icon solid fa-phone">(310) 200-5274</li>
+					<li class="icon solid fa-envelope"><a href="#">jujocotm@gmail.com</a></li>
+					<li class="icon brands fa-twitter"><a href="#">twitter.com/jujoco</a></li>
+					<li class="icon brands fa-facebook-f"><a href="#">facebook.com/jujoco</a></li>
+					<li class="icon brands fa-instagram"><a href="#">instagram.com/jujocotm</a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Jujoco | 2019</li>
+				</ul>
+			</div>
+		</section>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
