update main page

--- a/index.html
+++ b/index.html
@@ -2,172 +2,173 @@
 <html>
 
 <head>
-	<title>Julian J. Cobos Dev</title>
+	<title>Jujoco | Julian J. Cobos</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 </head>
 
 <body class="is-preload">
 
-	<!-- Page Wrapper -->
-	<div id="page-wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html">Julian J. Cobos</a></h1>
-			<nav>
-				<a href="#menu">Menu</a>
-			</nav>
+			<span class="logo"><img src="images/jujocoSunset.jpg" alt="" /></span>
+			<h1>Julian J. Cobos</h1>
+			<p>A Software Engineer based in San Francisco, CA<br /></p>
 		</header>
 
-		<!-- Menu -->
-		<nav id="menu">
-			<div class="inner">
-				<h2>Menu</h2>
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="#four">Projects</a></li>
-					<li><a href="#footer">Contact</a></li>
-				</ul>
-				<a href="#" class="close">Close</a>
-			</div>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#intro" class="active">Introduction</a></li>
+				<li><a href="#first">Projects</a></li>
+				<li><a href="#second">Tools</a></li>
+				<li><a href="#cta">Contact</a></li>
+			</ul>
 		</nav>
 
-		<!-- Banner -->
-		<section id="banner">
-			<div class="inner">
-				<div class="logo"><img class="icon" src="./images/headshot-pug.jpg" alt="picture of jujoco"></div>
-				<h2>Julian J. Cobos</h2>
-				<p>I'm a software engineer based in San Francisco, CA. I’m a huge fan of creating customer-facing web
-					apps that run across multiple devices using the latest technologies available..</p>
-			</div>
-		</section>
+		<!-- Main -->
+		<div id="main">
 
-		<!-- Wrapper -->
-		<section id="wrapper">
-
-			<!-- One -->
-			<section id="one" class="wrapper spotlight style1">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+			<!-- Introduction -->
+			<section id="intro" class="main">
+				<div class="spotlight">
 					<div class="content">
-						<h2 class="major">Motivation</h2>
-						<p>info coming soon.</p>
-						<a href="#" class="special">Learn more</a>
+						<header class="major">
+							<h2>Hi I'm Julian.</h2>
+						</header>
+						<p>I'm Software Engineer who enjoys clean code, adhering to best practices, and design patterns. I’m a huge
+							fan of creating full stack customer-facing web apps using Javascript frameworks and other web
+							technologies, especially if they are designed from the start with the user in mind.</p>
 					</div>
+					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="" /></span>
 				</div>
 			</section>
 
-			<!-- Two -->
-			<section id="two" class="wrapper alt spotlight style2">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">Tools</h2>
-						<p>info coming soon.</p>
-						<a href="#" class="special">Learn more</a>
-					</div>
-				</div>
-			</section>
-
-			<!-- Three -->
-			<section id="three" class="wrapper spotlight style3">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">Contributions</h2>
-						<p>info coming soon.</p>
-						<a href="#" class="special">Learn more</a>
-					</div>
-				</div>
-			</section>
-
-			<!-- Four -->
-			<section id="four" class="wrapper alt style1">
-				<div class="inner">
-					<h2 class="major">Resent Projects</h2>
-					<p>info coming soon.</p>
-					<section class="features">
-						<article>
-							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-							<h3 class="major">OutFitters</h3>
-							<p>info TBA.</p>
-							<a href="#" class="special">Learn more</a>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-							<h3 class="major">Amazony</h3>
-							<p>info TBA.</p>
-							<a href="#" class="special">Learn more</a>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-							<h3 class="major">MemoDis</h3>
-							<p>info TBA.</p>
-							<a href="#" class="special">Learn more</a>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-							<h3 class="major">TaxGuyAlbert</h3>
-							<p>info TBA.</p>
-							<a href="#" class="special">Learn more</a>
-						</article>
-					</section>
-					<ul class="actions">
-						<li><a href="#" class="button">Back to Top</a></li>
+			<!-- Projects Section-->
+			<section id="first" class="main special">
+				<header class="major">
+					<h2>Projects</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<span class="icon solid major style1 fa-code"></span>
+						<h3>MegaCart</h3>
+						<p>A love story between two database.
+						</p>
+					</li>
+					<li>
+						<span class="icon major style3 fa-copy"></span>
+						<h3>Outfitters</h3>
+						<p>A shopaholic's paradise.
+						</p>
+					</li>
+					<li>
+						<span class="icon major style5 fa-gem"></span>
+						<h3>MemoDis</h3>
+						<p>Why type when you can use your voice.
+						</p>
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="https://github.com/jujoco" class="button" target="_blank">github</a></li>
 					</ul>
-				</div>
+				</footer>
 			</section>
 
-		</section>
+			<!-- Tools Section -->
+			<section id="second" class="main special">
+				<header class="major">
+					<h2>Tools</h2>
+					<p>As a Software Engineer I have many tools at my disposal that well get the just done. But I take the time to
+						carefully pick out my tools need to efficiently get a job done. </p>
+				</header>
+				<ul class="statistics">
+					<li class="style2">
+						<span class="icon fa-file-code"></span>
+						<strong></strong> Code
+					</li>
+					<li class="style4">
+						<span class="icon solid fa-check-double"></span>
+						<strong></strong> Test
+					</li>
+					<li class="style3">
+						<span class="icon solid fa-search"></span>
+						<strong></strong> Review
+					</li>
+					<li class="style1">
+						<span class="icon solid fa-code-branch"></span>
+						<strong></strong> Review
+					</li>
+					<li class="style5">
+						<span class="icon solid fa-plane-departure"></span>
+						<strong></strong> Deploy
+					</li>
+				</ul>
+				<p class="content">Info TBA.</p>
+			</section>
+
+			<!-- Contact Section -->
+			<section id="cta" class="main special">
+				<header class="major">
+					<h2>Lets Chat!</h2>
+					<p>If you have a project that you want to get started, think you need my<br />
+						help with something or just fancy saying hey, then get in touch.</p>
+				</header>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="mailto:juliancobos.dev@gmail.com" class="button" target="_blank">Gmail</a></li>
+						<li><a href="https://www.linkedin.com/in/jujoco/" class="button primary" target="_blank">LinkedIn</a></li>
+					</ul>
+				</footer>
+			</section>
+
+		</div>
 
 		<!-- Footer -->
-		<section id="footer">
-			<div class="inner">
-				<h2 class="major">Get in touch</h2>
-				<p>As of June 1st 2019, I'm curreting seeking a full time role as a front-end engineer. If you or if your
-					'friend' is seeking some awesome talent. Hit me up!</p>
-				<form method="post" action="#">
-					<div class="fields">
-						<div class="field">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
-						</div>
-						<div class="field">
-							<label for="email">Email</label>
-							<input type="email" name="email" id="email" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="4"></textarea>
-						</div>
-					</div>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" /></li>
-					</ul>
-				</form>
-				<ul class="contact">
-					<li class="icon solid fa-home">San Francisco, CA</li>
-					<li class="icon solid fa-phone">(310) 200-5274</li>
-					<li class="icon solid fa-envelope"><a href="#">jujocotm@gmail.com</a></li>
-					<li class="icon brands fa-twitter"><a href="#">twitter.com/jujoco</a></li>
-					<li class="icon brands fa-facebook-f"><a href="#">facebook.com/jujoco</a></li>
-					<li class="icon brands fa-instagram"><a href="#">instagram.com/jujocotm</a></li>
+		<footer id="footer">
+			<section>
+				<h2>Fun facts about me</h2>
+				<p>Road bike enthusiast. Cinematographer. Film buff. YouTuber. Professional DJ. Nearly trilingual.</p>
+				<ul class="actions">
+					<li><a href="generic.html" class="button">Learn More</a></li>
 				</ul>
-				<ul class="copyright">
-					<li>&copy; Jujoco | 2019</li>
+			</section>
+			<section>
+				<h2>Contact Info</h2>
+				<dl class="alt">
+					<dt>City</dt>
+					<dd>San Francisco, CA</dd>
+					<dt>Phone</dt>
+					<dd>(310) 200-5274</dd>
+					<dt>Email</dt>
+					<dd><a href="#">juliancobos.dev@gmail.com</a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="https://www.github.com/jujoco/" class="icon brands fa-github alt" target="_blank"><span
+								class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/jujoco/" class="icon brands fa-linkedin alt" target="_blank"><span
+								class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.instagram.com/jujocotm/" class="icon brands fa-instagram alt" target="_blank"><span
+								class="label">Instagram</span></a></li>
+					<li><a href="https://www.youtube.com/jujoco/" class="icon brands fa-youtube alt" target="_blank"><span
+								class="label">YouTube</span></a></li>
 				</ul>
-			</div>
-		</section>
+			</section>
+			<p class="copyright">&copy; Jujoco &trade;</p>
+		</footer>
 
 	</div>
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
