--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					</li>
 					<li class="style1">
 						<span class="icon solid fa-code-branch"></span>
-						<strong></strong> Review
+						<strong></strong> Control
 					</li>
 					<li class="style5">
 						<span class="icon solid fa-plane-departure"></span>
@@ -133,8 +133,8 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<h2>Fun facts about me</h2>
-				<p>Road bike enthusiast. Cinematographer. Film buff. YouTuber. Professional DJ. Nearly trilingual.</p>
+				<h2>Fun fact</h2>
+				<p>I use to DJ professionally all across the US.</p>
 				<ul class="actions">
 					<li><a href="generic.html" class="button">Learn More</a></li>
 				</ul>
@@ -156,7 +156,7 @@
 								class="label">LinkedIn</span></a></li>
 					<li><a href="https://www.instagram.com/jujocotm/" class="icon brands fa-instagram alt" target="_blank"><span
 								class="label">Instagram</span></a></li>
-					<li><a href="https://www.youtube.com/jujoco/" class="icon brands fa-youtube alt" target="_blank"><span
+					<li><a href="https://www.youtube.com/jujocotm/" class="icon brands fa-youtube alt" target="_blank"><span
 								class="label">YouTube</span></a></li>
 				</ul>
 			</section>
