update fun fact

--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
 		<footer id="footer">
 			<section>
 				<h2>Fun fact</h2>
-				<p>I use to DJ professionally all across the US.</p>
-				<ul class="actions">
-					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul>
+				<p>I use to DJ professionally all across the US the age of 17.</p>
 			</section>
 			<section>
 				<h2>Contact Info</h2>
