update project section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<li>
 						<span class="icon solid major style1 fa-code"></span>
 						<h3>MegaCart</h3>
-						<p>A love story between two database.
+						<p>A love story between two databases.
 						</p>
 					</li>
 					<li>
@@ -70,7 +70,7 @@
 					<li>
 						<span class="icon major style5 fa-gem"></span>
 						<h3>MemoDis</h3>
-						<p>Why type when you can use your voice.
+						<p>A full Stack application.
 						</p>
 					</li>
 				</ul>
