update project and bg color

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 				</header>
 				<ul class="features">
 					<li>
-						<span class="icon solid major style1 fa-code"></span>
+						<span class="icon solid major style1 fa-shopping-cart"></span>
 						<h3>MegaCart</h3>
 						<p>A love story between two databases.
 						</p>
 					</li>
 					<li>
-						<span class="icon major style3 fa-copy"></span>
+						<span class="icon solid major style3 fa-tags"></span>
 						<h3>Outfitters</h3>
 						<p>A shopaholic's paradise.
 						</p>
 					</li>
 					<li>
-						<span class="icon major style5 fa-gem"></span>
+						<span class="icon solid major style5 fa-layer-group"></span>
 						<h3>MemoDis</h3>
 						<p>A full Stack application.
 						</p>
