update contact info

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 				<dl class="alt">
 					<dt>City</dt>
 					<dd>San Francisco, CA</dd>
-					<dt>Phone</dt>
-					<dd>(310) 200-5274</dd>
 					<dt>Email</dt>
-					<dd><a href="#">juliancobos.dev@gmail.com</a></dd>
+					<dd><a href="mailto:juliancobos.dev@gmail.com" target="_blank">juliancobos.dev@gmail.com</a></dd>
+					<dt>LinkedIn</dt>
+					<dd><a href="https://www.linkedin.com/in/jujoco/" target="_blank">linkedin.com/in/jujoco</a></dd>
 				</dl>
 				<ul class="icons">
 					<li><a href="https://www.github.com/jujoco/" class="icon brands fa-github alt" target="_blank"><span
