edit tools section

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 			<section id="second" class="main special">
 				<header class="major">
 					<h2>Tools</h2>
-					<p>As a Software Engineer I have many tools at my disposal that well get the just done. But I take the time to
-						carefully pick out my tools need to efficiently get a job done. </p>
+					<p>As a Software Engineer, I have many tools at my disposal that will get the job done. But I take the time to
+						carefully pick out my tools to efficiently get a job done.</p>
 				</header>
 				<ul class="statistics">
 					<li class="style2">
