--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<header class="major">
 							<h2>Hi I'm Julian.</h2>
 						</header>
-						<p>I'm Software Engineer who enjoys clean code, adhering to best practices, and design patterns. I’m a huge
+						<p>I'm a Software Engineer who enjoys clean code, adhering to best practices and design patterns. I’m a huge
 							fan of creating full stack customer-facing web apps using Javascript frameworks and other web
 							technologies, especially if they are designed from the start with the user in mind.</p>
 					</div>
