--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<ul class="features">
 					<li>
 						<span class="icon solid major style1 fa-shopping-cart"></span>
-						<h3>MegaCart</h3>
+						<h3>Amazony</h3>
 						<p>A love story between two databases.
 						</p>
 					</li>
