fix meta tag syntax issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Jujoco | Julian J. Cobos</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="theme-color" content="#334170">
+	<meta name="theme-color" content="#334170" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
