--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="theme-color" content="#334170" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" sizes="192x192" href="./images/jujocoSunset.jpg">
 </head>
 
 <body class="is-preload">
