--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<title>Jujoco | Julian J. Cobos</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="A Software Engineer based in San Francisco, CA">
+	<meta name="author" content="Julian Cobos">
+	<meta name="keywords"
+		content="Frontend Engineer Portfolio, Software Engineer Portfolio, Web Developer Portfolio, JavaScript, React, HTML, CSS, Node, Webpack">
 	<meta name="theme-color" content="#334170" />
 	<link rel="icon" sizes="192x192" href="./images/jujocoFavicon.jpeg">
 
