ad lang attribute

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
 	<title>Jujoco | Julian J. Cobos</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description" content="A Software Engineer based in San Francisco, CA">
+	<meta name="description"
+		content="Julian Cobos is a Software Engineer based in San Francisco, CA. He is currently open to new opportunities.">
 	<meta name="author" content="Julian Cobos">
 	<meta name="keywords"
 		content="Frontend Engineer Portfolio, Software Engineer Portfolio, Web Developer Portfolio, JavaScript, React, HTML, CSS, Node, Webpack">
