--- a/index.html
+++ b/index.html
@@ -154,14 +154,22 @@
 					<dd><a href="https://www.linkedin.com/in/jujoco/" target="_blank">linkedin.com/in/jujoco</a></dd>
 				</dl>
 				<ul class="icons">
-					<li><a href="https://www.github.com/jujoco/" class="icon brands fa-github alt" target="_blank"><span
-								class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/jujoco/" class="icon brands fa-linkedin alt" target="_blank"><span
-								class="label">LinkedIn</span></a></li>
-					<li><a href="https://www.instagram.com/jujocotm/" class="icon brands fa-instagram alt" target="_blank"><span
-								class="label">Instagram</span></a></li>
-					<li><a href="https://www.youtube.com/jujocotm/" class="icon brands fa-youtube alt" target="_blank"><span
-								class="label">YouTube</span></a></li>
+					<li>
+						<a href="https://www.github.com/jujoco/" class="icon brands fa-github alt"
+							aria-label="Check out Julian's Github" target="_blank"><span class="label">GitHub</span></a>
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/jujoco/" class="icon brands fa-linkedin alt"
+							aria-label="Check out Julian's LinkedIn profile" target="_blank"><span class="label">LinkedIn</span></a>
+					</li>
+					<li>
+						<a href="https://www.instagram.com/jujocotm/" class="icon brands fa-instagram alt"
+							aria-label="Check out Julian's Instagram account" target="_blank"><span class="label">Instagram</span></a>
+					</li>
+					<li>
+						<a href="https://www.youtube.com/jujocotm/" class="icon brands fa-youtube alt"
+							aria-label="Check out Julian's Youtube Channel" target="_blank"><span class="label">YouTube</span></a>
+					</li>
 				</ul>
 			</section>
 			<p class="copyright">&copy; Jujoco &trade;</p>
