--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
 <head>
 	<title>Jujoco | Julian J. Cobos</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
 		content="Julian Cobos is a Software Engineer based in San Francisco, CA. He is currently open to new opportunities.">
 	<meta name="author" content="Julian Cobos">
 	<meta name="keywords"
 		content="Frontend Engineer Portfolio, Software Engineer Portfolio, Web Developer Portfolio, JavaScript, React, HTML, CSS, Node, Webpack">
-	<meta name="theme-color" content="#334170" />
+	<meta name="theme-color" content="#334170">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" sizes="192x192" href="./images/jujocoFavicon.jpeg">
 
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body class="is-preload">
