add rel noopner

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				</ul>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="https://github.com/jujoco" class="button" target="_blank">github</a></li>
+						<li><a href="https://github.com/jujoco" class="button" target="_blank" rel="noopener">github</a></li>
 					</ul>
 				</footer>
 			</section>
@@ -131,7 +131,8 @@
 				<footer class="major">
 					<ul class="actions special">
 						<li><a href="mailto:juliancobos.dev@gmail.com" class="button" target="_blank">Gmail</a></li>
-						<li><a href="https://www.linkedin.com/in/jujoco/" class="button primary" target="_blank">LinkedIn</a></li>
+						<li><a href="https://www.linkedin.com/in/jujoco/" class="button primary" target="_blank"
+								rel="noopener">LinkedIn</a></li>
 					</ul>
 				</footer>
 			</section>
@@ -152,24 +153,29 @@
 					<dt>Email</dt>
 					<dd><a href="mailto:juliancobos.dev@gmail.com" target="_blank">juliancobos.dev@gmail.com</a></dd>
 					<dt>LinkedIn</dt>
-					<dd><a href="https://www.linkedin.com/in/jujoco/" target="_blank">linkedin.com/in/jujoco</a></dd>
+					<dd><a href="https://www.linkedin.com/in/jujoco/" target="_blank" rel="noopener">linkedin.com/in/jujoco</a>
+					</dd>
 				</dl>
 				<ul class="icons">
 					<li>
 						<a href="https://www.github.com/jujoco/" class="icon brands fa-github alt"
-							aria-label="Check out Julian's Github" target="_blank"><span class="label">GitHub</span></a>
+							aria-label="Check out Julian's Github" target="_blank" rel="noopener"><span
+								class="label">GitHub</span></a>
 					</li>
 					<li>
 						<a href="https://www.linkedin.com/in/jujoco/" class="icon brands fa-linkedin alt"
-							aria-label="Check out Julian's LinkedIn profile" target="_blank"><span class="label">LinkedIn</span></a>
+							aria-label="Check out Julian's LinkedIn profile" target="_blank" rel="noopener"><span
+								class="label">LinkedIn</span></a>
 					</li>
 					<li>
 						<a href="https://www.instagram.com/jujocotm/" class="icon brands fa-instagram alt"
-							aria-label="Check out Julian's Instagram account" target="_blank"><span class="label">Instagram</span></a>
+							aria-label="Check out Julian's Instagram account" target="_blank" rel="noopener"><span
+								class="label">Instagram</span></a>
 					</li>
 					<li>
 						<a href="https://www.youtube.com/jujocotm/" class="icon brands fa-youtube alt"
-							aria-label="Check out Julian's Youtube Channel" target="_blank"><span class="label">YouTube</span></a>
+							aria-label="Check out Julian's Youtube Channel" target="_blank" rel="noopener"><span
+								class="label">YouTube</span></a>
 					</li>
 				</ul>
 			</section>
