--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	<meta name="author" content="Julian Cobos">
 	<meta name="keywords"
 		content="Frontend Engineer Portfolio, Software Engineer Portfolio, Web Developer Portfolio, JavaScript, React, HTML, CSS, Node, Webpack">
+	<link rel="manifest" href="./manifest.json">
 	<meta name="theme-color" content="#334170">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="icon" sizes="192x192" href="./images/jujocoFavicon.jpeg">
+	<link rel="icon" sizes="192x192" href="./images/jujoco192.png">
 
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -24,7 +25,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<span class="logo"><img src="images/jujocoSunset.jpg" alt="" /></span>
+			<span class="logo"><img src="images/jujoco192.png" alt="" /></span>
 			<h1>Julian J. Cobos</h1>
 			<p>A Software Engineer based in San Francisco, CA<br /></p>
 		</header>
