--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</header>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="mailto:juliancobos.dev@gmail.com" class="button" target="_blank">Gmail</a></li>
+						<li><a href="mailto:jujocotm@gmail.com" class="button" target="_blank">Gmail</a></li>
 						<li><a href="https://www.linkedin.com/in/jujoco/" class="button primary" target="_blank"
 								rel="noopener">LinkedIn</a></li>
 					</ul>
@@ -152,7 +152,7 @@
 					<dt>City</dt>
 					<dd>San Francisco, CA</dd>
 					<dt>Email</dt>
-					<dd><a href="mailto:juliancobos.dev@gmail.com" target="_blank">juliancobos.dev@gmail.com</a></dd>
+					<dd><a href="mailto:jujocotm@gmail.com" target="_blank">jujocotm@gmail.com</a></dd>
 					<dt>LinkedIn</dt>
 					<dd><a href="https://www.linkedin.com/in/jujoco/" target="_blank" rel="noopener">linkedin.com/in/jujoco</a>
 					</dd>
