--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="/serviceWorker.js"></script>
 
 </body>
 
