--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							fan of creating full stack customer-facing web apps using Javascript frameworks and other web
 							technologies, especially if they are designed from the start with the user in mind.</p>
 					</div>
-					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="" /></span>
+					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="A lovely picture of Julian" /></span>
 				</div>
 			</section>
 
@@ -65,22 +65,19 @@
 				</header>
 				<ul class="features">
 					<li>
-						<span class="icon solid major style1 fa-shopping-cart"></span>
+						<img class="icon solid major" src="images/megacart.png" alt="MegaCart application" />
 						<h3>MegaCart</h3>
-						<p>A love story between two databases.
-						</p>
+						<p>Backend e-Commerce system design module</p>
 					</li>
 					<li>
-						<span class="icon solid major style3 fa-tags"></span>
+						<img class="icon solid major" src="images/outfitters.png" alt="Outfitters application" />
 						<h3>Outfitters</h3>
-						<p>A shopaholic's paradise.
-						</p>
+						<p>Full Stack e-Commerce clothing store</p>
 					</li>
 					<li>
-						<span class="icon solid major style5 fa-layer-group"></span>
+						<img class="icon solid major" src="images/memodis.png" alt="MemoDis application" />
 						<h3>MemoDis</h3>
-						<p>A full Stack application.
-						</p>
+						<p>full Stack Speech to Text Web application</p>
 					</li>
 				</ul>
 				<footer class="major">
