add project links

--- a/index.html
+++ b/index.html
@@ -65,19 +65,25 @@
 				</header>
 				<ul class="features">
 					<li>
-						<img class="icon solid major" src="images/megacart.png" alt="MegaCart application" />
+						<a href="https://github.com/jujoco/megacart" target="_blank" rel="noopener">
+							<img class="icon major" src="images/megacart.png" alt="MegaCart application" />
+						</a>
 						<h3>MegaCart</h3>
 						<p>Backend e-Commerce system design module</p>
 					</li>
 					<li>
-						<img class="icon solid major" src="images/outfitters.png" alt="Outfitters application" />
+						<a href="https://github.com/jujoco/outfitters" target="_blank" rel="noopener">
+							<img class="icon major" src="images/outfitters.png" alt="Outfitters application" />
+						</a>
 						<h3>Outfitters</h3>
 						<p>Full Stack e-Commerce clothing store</p>
 					</li>
 					<li>
-						<img class="icon solid major" src="images/memodis.png" alt="MemoDis application" />
+						<a href="https://github.com/jujoco/memodis" target="_blank" rel="noopener">
+							<img class="icon major" src="images/memodis.png" alt="MemoDis application" />
+						</a>
 						<h3>MemoDis</h3>
-						<p>full Stack Speech to Text Web application</p>
+						<p>Full Stack Speech to Text Web application</p>
 					</li>
 				</ul>
 				<footer class="major">
@@ -116,7 +122,7 @@
 						<strong></strong> Deploy
 					</li>
 				</ul>
-				<p class="content">Info TBA.</p>
+				<p class="content"></p>
 			</section>
 
 			<!-- Contact Section -->
