update color theme and icon size

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="spotlight">
 					<div class="content">
 						<header class="major">
-							<h2>Hi I'm Julian.</h2>
+							<h2>Hi, I'm Julian.</h2>
 						</header>
 						<p>I'm a Software Engineer who enjoys clean code, adhering to best practices and design patterns. I’m a huge
 							fan of creating full stack customer-facing web apps using Javascript frameworks and other web
