remove strong tag

--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
 				<ul class="statistics">
 					<li class="style2">
 						<span class="icon fa-file-code"></span>
-						<strong></strong> Code
+						Code
 					</li>
 					<li class="style4">
 						<span class="icon solid fa-check-double"></span>
-						<strong></strong> Test
+						Test
 					</li>
 					<li class="style3">
 						<span class="icon solid fa-search"></span>
-						<strong></strong> Review
+						Review
 					</li>
 					<li class="style1">
 						<span class="icon solid fa-code-branch"></span>
-						<strong></strong> Control
+						Control
 					</li>
 					<li class="style5">
 						<span class="icon solid fa-plane-departure"></span>
-						<strong></strong> Deploy
+						Deploy
 					</li>
 				</ul>
 				<p class="content"></p>
