--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 						<header class="major">
 							<h2>Hi, I'm Julian.</h2>
 						</header>
-						<p>I'm a Software Engineer who enjoys clean code, adhering to best practices and design patterns. I’m a huge
-							fan of creating full stack customer-facing web apps using Javascript frameworks and other web
-							technologies, especially if they are designed from the start with the user in mind.</p>
+						<p>I’m a Software Engineer with experience creating scalable full-stack applications. I enjoy clean code,
+							adhering to best practices, and MVC design patterns. I’m passionate about creating full stack
+							customer-facing web apps in React and learning new technologies, especially if they are designed with the
+							user in mind.</p>
 					</div>
 					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="A lovely picture of Julian" /></span>
 				</div>
