--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 				<li><a href="#first">Projects</a></li>
 				<li><a href="#second">Tools</a></li>
 				<li><a href="#cta">Contact</a></li>
+				<li><a href="https://drive.google.com/open?id=1v9RxP1e-PgTJU2eS_JOSX5bUdaY9Fdrh" target="_blank"
+						rel="noopener">Resume</a></li>
 			</ul>
 		</nav>
 
@@ -50,10 +52,11 @@
 						<header class="major">
 							<h2>Hi, I'm Julian.</h2>
 						</header>
-						<p>I’m a Software Engineer with experience creating scalable full-stack applications. I enjoy clean code,
-							adhering to best practices, and MVC design patterns. I’m passionate about creating full stack
-							customer-facing web apps in React and learning new technologies, especially if they are designed with the
-							user in mind.</p>
+						<p>I’m a software engineer with experience creating scalable full-stack applications. I enjoy writing clean
+							code, adhering to best practices, and working with service-oriented architectures. I’m passionate about
+							creating full stack customer-facing web applications and learning new technologies, especially if they are
+							designed from the start with the user in mind. -Feel free to reach out and discuss software engineering
+							opportunities.</p>
 					</div>
 					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="A lovely picture of Julian" /></span>
 				</div>
