--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<p>I’m a software engineer with experience creating scalable full-stack applications. I enjoy writing clean
 							code, adhering to best practices, and working with service-oriented architectures. I’m passionate about
 							creating full stack customer-facing web applications and learning new technologies, especially if they are
-							designed from the start with the user in mind. -Feel free to reach out and discuss software engineering
+							designed from the start with the user in mind. Feel free to reach out and discuss software engineering
 							opportunities.</p>
 					</div>
 					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="A lovely picture of Julian" /></span>
