--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
 						<header class="major">
 							<h2>Hi, I'm Julian.</h2>
 						</header>
-						<p>I’m a software engineer with experience creating scalable full-stack applications. I enjoy writing clean
-							code, adhering to best practices, and working with service-oriented architectures. I’m passionate about
-							creating full stack customer-facing web applications and learning new technologies, especially if they are
-							designed from the start with the user in mind. Feel free to reach out and discuss software engineering
+						<p>I’m a Software Engineer with up-to-date experience creating scalable full stack applications. I’ve worked closely with product managers and teammates to build the next generation of products leveraging JavaScript frameworks such as React. I enjoy writing clean code, adhering to best practices, and working in a collaborative environment. Feel free to reach out and discuss software engineering
 							opportunities.</p>
 					</div>
 					<span class="image"><img src="images/jujocoHeadshot.jpg" alt="A lovely picture of Julian" /></span>
