update sw and resume link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#second">Tools</a></li>
         <li><a href="#cta">Contact</a></li>
         <li>
-          <a href="https://drive.google.com/open?id=1dtZCbAxKyE2N0pWrb2_h3JlOBhZ4L9NO" target="_blank"
+          <a href="https://drive.google.com/file/d/1uUPzYW-7VgRf41Ml9bCU3TTyN7R4RYLJ" target="_blank"
             rel="noopener">Resume</a>
         </li>
       </ul>
@@ -233,10 +233,7 @@
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/serviceWorker.js').then(
           registration => {
-            console.log(
-              'ServiceWorker registration successful: ',
-              registration.scope
-            );
+            console.log('You can now download my site as a PWA! :)');
           },
           err => {
             console.log('ServiceWorker registration failed: ', err);
