--- a/index.html
+++ b/index.html
@@ -83,27 +83,7 @@
           <h2>Projects</h2>
         </header>
         <ul class="features">
-          <li>
-            <a href="https://github.com/jujoco/megacart" target="_blank" rel="noopener">
-              <img class="icon major" src="images/megacart.png" alt="MegaCart application" />
-            </a>
-            <h3>MegaCart</h3>
-            <p>Backend e-Commerce system design module</p>
-          </li>
-          <li>
-            <a href="https://github.com/jujoco/outfitters" target="_blank" rel="noopener">
-              <img class="icon major" src="images/outfitters.png" alt="Outfitters application" />
-            </a>
-            <h3>Outfitters</h3>
-            <p>Full Stack e-Commerce clothing store</p>
-          </li>
-          <li>
-            <a href="https://github.com/jujoco/memodis" target="_blank" rel="noopener">
-              <img class="icon major" src="images/memodis.png" alt="MemoDis application" />
-            </a>
-            <h3>MemoDis</h3>
-            <p>Full Stack Speech to Text Web application</p>
-          </li>
+
         </ul>
         <footer class="major">
           <ul class="actions special">
@@ -227,7 +207,8 @@
   <script src="assets/js/browser.min.js"></script>
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/main.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+  <script src="main.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
