--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
 
     gtag('config', 'UA-142120769-1');
   </script>
-
   <title>Jujoco | Julian J. Cobos</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Julian Cobos is a Software Engineer based in San Francisco, CA. He is currently open to new opportunities." />
-  <meta name="author" content="Julian Cobos" />
+  <meta name="description" content="Julian Cobos is a Software Engineer based in Los Angeles, CA." />
+  <meta name="author" content="Julian J. Cobos" />
   <meta name="keywords"
     content="Frontend Engineer Portfolio, Software Engineer Portfolio, Web Developer Portfolio, JavaScript, React, HTML, CSS, Node, Webpack" />
   <meta name="theme-color" content="#003366" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
   <link rel="manifest" href="./manifest.json" />
   <link rel="icon" sizes="192x192" href="./images/jujoco192.png" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -37,7 +34,7 @@
     <header id="header" class="alt">
       <span class="logo"><img src="images/jujoco192.png" alt="" /></span>
       <h1>Julian J. Cobos</h1>
-      <p>A Software Engineer based in San Francisco, CA<br /></p>
+      <p>A Software Engineer based in Santa Monica, CA.</p>
     </header>
 
     <!-- Nav -->
@@ -64,13 +61,11 @@
               <h2>Hi, I'm Julian.</h2>
             </header>
             <p>
-              I’m a Software Engineer with up-to-date experience creating
-              scalable full stack applications. I’ve worked closely with
-              product managers and software engineers to build the next
-              generation of products leveraging JavaScript frameworks such as
-              React. I enjoy writing clean code, adhering to best practices,
-              and working in a collaborative environment. Feel free to reach
-              out and discuss software engineering opportunities.
+              I’m a Frontend Software Engineer with up-to-date experience creating scalable full-stack web applications.
+              I’ve worked closely with product managers, designers, and software engineers to build the next generation
+              of products leveraging JavaScript libraries such as React and Gatsby. I enjoy writing clean code, adhering
+              to best practices, and working in a collaborative environment. Feel free to reach out and discuss software
+              engineering opportunities.
             </p>
           </div>
           <span class="image"><img src="images/jujocoHeadshot.jpg" alt="A lovely picture of Julian" /></span>
@@ -82,9 +77,7 @@
         <header class="major">
           <h2>Projects</h2>
         </header>
-        <ul class="features">
-
-        </ul>
+        <ul class="features"></ul>
         <footer class="major">
           <ul class="actions special">
             <li>
@@ -163,7 +156,7 @@
         <h2>Contact Info</h2>
         <dl class="alt">
           <dt>City</dt>
-          <dd>San Francisco, CA</dd>
+          <dd>Los Angeles, CA</dd>
           <dt>Email</dt>
           <dd>
             <a href="mailto:jujocotm@gmail.com" target="_blank">jujocotm@gmail.com</a>
@@ -196,17 +189,11 @@
           </li>
         </ul>
       </section>
-      <p class="copyright">&copy; Jujoco &trade;</p>
+      <p class="copyright">Jujoco&trade; &copy; 2019</p>
     </footer>
   </div>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/jquery.scrollex.min.js"></script>
-  <script src="assets/js/jquery.scrolly.min.js"></script>
-  <script src="assets/js/browser.min.js"></script>
-  <script src="assets/js/breakpoints.min.js"></script>
-  <script src="assets/js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
   <script src="main.js"></script>
   <script>
