--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
-  <script src="main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
