--- a/project-1.html
+++ b/project-1.html
@@ -43,7 +43,7 @@
     <footer id="footer">
       <section>
         <h2>Fun fact</h2>
-        <p>I used to DJ professionally all across the US at the age of 17.</p>
+        <p>I uses to DJ professionally all across the US at the age of 17.</p>
         <ul class="actions">
           <li><a href="./index.html" class="button">Home</a></li>
         </ul>
